--- a/pom.xml
+++ b/pom.xml
@@ -69,7 +69,11 @@
             <artifactId>s3</artifactId>
             <version>2.17.47</version>
         </dependency>
-
+        <dependency>
+            <groupId>com.mpatric</groupId>
+            <artifactId>mp3agic</artifactId>
+            <version>0.9.1</version>
+        </dependency>
         <dependency>
             <groupId>org.thymeleaf.extras</groupId>
             <artifactId>thymeleaf-extras-springsecurity6</artifactId>
